apps/base/dozzle/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dozzle
  namespace: dozzle
spec:
  selector:
    app: dozzle
  ports:
    - name: http-dozzle
      protocol: TCP
      port: 8080
      targetPort: http-dozzle
