apps/base/dozzle/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dozzle
  namespace: dozzle
spec:
  ingressClassName: traefik
  rules:
    - host: dozzle.localho.st
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dozzle
                port:
                  name: http-dozzle
