apps/base/dozzle/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dozzle-route
  namespace: dozzle
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - dozzle.localho.st
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dozzle
          port: 8080
